Monsters also have burn/poison effect shown, potions no longer make model jump, death screen landscape responsivness added

--- a/src/styles/ability-animations.css
+++ b/src/styles/ability-animations.css
@@ -567,5 +567,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
